# agentsec

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.benchmark  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-label.yml  ci.yml  claude-review.yml  codeql.yml  publish.yml  tag-verify.yml  weekly-mcp-scan.yml
demo/: DEMO_GUIDE.md  SCRIPT.md  fix_demo.py  record_demo.sh  setup_demo.py
demo/demo-target/: docker-compose.yml
demo/demo-target/.openclaw/: SOUL.md  exec-approvals.json  integrations.json  mcp.json  openclaw.json  openclaw.json.bak.20260222T182545
docs/: checks-catalog.md  cli-reference.md  mcp-security-grades.md  state-of-mcp-security-2026.md  threat-model.md  whitepaper-outline.md
docs/adr/: ADR-0001-core-architecture.md  ADR-0002-owasp-scoring-formula.md  ADR-0003-hardening-not-patching.md  ADR-0004-pre-install-gate.md
docs/benchmarks/: 2026-02-top50-mcp-security-study.md  FIXTURE_MATRIX.md  METHODOLOGY.md  run_benchmark.py  run_redteam_benchmark.py
docs/benchmarks/results/: 2026-02-15-v0.4.0-linux.json  2026-02-15-v0.4.0-macos.json  2026-02-15-v0.4.0.json  2026-02-15-v0.4.0.md  RESULTS_TEMPLATE.md  redteam-latest.json
docs/benchmarks/top50/: README.md
docs/blog/: immunize-your-openclaw.md
docs/case-studies/: 001-insecure-openclaw-workstation.md  002-public-bot-vps-hardening.md  003-preinstall-gate-blocked-malicious-package.md  004-malicious-skill-detection-and-block.md  005-openclaw-plugin-preflight.md  TEMPLATE.md
docs/case-studies/artifacts/: README.md  case1-after.json  case1-before.json  case2-after.json  case2-before.json  case3-gate-findings.json  case4-scan-results.json  case5-tweetclaw-skill-scan.json
docs/demo/: Dockerfile  Dockerfile.dev  Dockerfile.screenshot  README.md  build_screenshots.py  generate_ui_screenshots.py  render_report.py
docs/demo/openclaw-hardened/: exec-approvals.json  openclaw.json
docs/demo/openclaw-insecure/: .env  openclaw.json
docs/demo/screenshots/: scan-clean.html  scan-insecure.html  screenshot-insecure.html  ui-clean.html  ui-insecure.html
docs/design/: agentsec-architecture.md
docs/evidence/: EVIDENCE_TRACKER.md
docs/launch/: LAUNCH_EVIDENCE_MANIFEST.md  REPRODUCIBILITY_SPEC.md
docs/mcp-dashboard/data/: findings_20260217.jsonl  findings_20260316.jsonl  findings_20260323.jsonl  findings_20260330.jsonl  findings_20260406.jsonl  findings_20260413.jsonl  findings_20260420.jsonl  findings_20260427.jsonl  findings_20260504.jsonl  findings_20260511.jsonl  findings_20260518.jsonl  findings_20260525.jsonl  findings_20260601.jsonl  findings_20260605.jsonl  findings_20260608.jsonl  findings_20260615.jsonl  findings_20260622.jsonl  findings_20260629.jsonl  selection_20260217.csv  selection_20260217v2.csv  selection_20260316.csv  selection_20260323.csv  selection_20260330.csv  selection_20260406.csv  selection_20260413.csv  selection_20260420.csv  selection_20260427.csv  selection_20260504.csv  selection_20260511.csv  selection_20260518.csv  selection_20260525.csv  selection_20260601.csv  selection_20260605.csv  selection_20260608.csv  selection_20260615.csv  selection_20260622.csv  selection_20260629.csv  summary_20260217.json  summary_20260316.json  summary_20260323.json  (+15 more)
docs/mcp-dashboard/repos/: 0x4m4-hexstrike-ai.md  21st-dev-magic-mcp.md  AmoyLab-Unla.md  BeehiveInnovations-pal-mcp-server.md  BrowserMCP-mcp.md  CodeGraphContext-CodeGraphContext.md  Coding-Solo-godot-mcp.md  CursorTouch-Windows-MCP.md  FlorianBruniaux-claude-code-ultimate-guide.md  GLips-Figma-Context-MCP.md  Gentleman-Programming-engram.md  Jpisnice-shadcn-ui-mcp-server.md  LaurieWired-GhidraMCP.md  Manavarya09-design-extract.md  MarkusPfundstein-mcp-obsidian.md  Minidoracat-mcp-feedback-enhanced.md  Pimzino-spec-workflow-mcp.md  PrefectHQ-fastmcp.md  TabularisDB-tabularis.md  activepieces-activepieces.md  (+51 more)
docs/reviews/: ciso-risk-compliance-review.md  detection-engineering-review.md  offensive-security-review.md  platform-security-architecture-review.md  supply-chain-security-review.md
examples/policies/: corporate.yaml  strict.yaml
requirements/: constraints-dev.txt
scripts/: compare_scanners.py  generate_mcp_dashboard.py  repo_consistency_audit.py  reproduce_local_evidence.py  reproduce_top50_study.ps1  run_ecosystem_study.py  run_top50_study.py  semgrep-top50-rules.yml
src/agentsec/: __init__.py  cli.py  discovery.py  gate.py  hardener.py  impacts.py  orchestrator.py  policy.py  watcher.py
tests/integration/: test_cli_integration.py
tests/unit/: test_adapters.py  test_agent_definitions.py  test_baseline.py  test_cli.py  test_credential_scanner.py  test_credential_scanner_adversarial.py  test_detection.py  test_discovery.py  test_findings.py  test_gate.py  test_git_history_scan.py  test_hardener.py  test_impacts.py  test_installation_scanner.py  test_mcp_scanner.py  test_openclaw_checks.py  test_orchestrator.py  test_owasp_scorer.py  test_policy.py  test_sarif_reporter.py  test_skill_analyzer.py  test_skill_malware.py  test_verifier.py  test_watcher.py
(+41 files in other folders)
